--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Sally Lab
+title: Sally's Lab
 page-title:  Welcome to Sally's Laboratory
 home-title: The more that you read, the more things you will know.
 description: The more that you learn, the more places you'll go.
