--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Project Showcase
-page-title: Project Showcase
+title: Portfolio
+page-title: Portfolio
 description:
 ---
 
